Hidden after loading to prevent a gap at the bottom of the editor.

--- a/sites/all/modules/custom/slickgrid/css/slickgrid.css
+++ b/sites/all/modules/custom/slickgrid/css/slickgrid.css
@@ -102,7 +102,6 @@
   border: none!important;
   height: 30px;
   border-bottom: 1px solid #A5A5A5!important;
-  display: none;
 }
 
 .slick-headerrow .slick-headerrow-column{
